@@ -6,7 +6,7 @@ Type: Package
 Author: Machteld Varewyck, Laure Cougnaud, Eva Adriaensen
 Description: Data visualization of grof wild in Vlaanderen.
 Version: 0.1.13
-Date: 2020-02-12
+Date: 2020-02-13
 Imports:
     shiny, sp, plotly, plyr, INBOtheme, devtools, methods, reshape2, mgcv, rgdal, rgeos, shinycssloaders, raster, leaflet,  magrittr, DT
 Depends: maptools
